<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:keepScreenOn="true">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/PayTheoryFragment"
                    tools:ignore="UselessParent">

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/account_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_on_account"
                            android:visibility="gone"
                            android:inputType="text"
                            android:autofillHints="personName"/>

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/billing_address_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/billing_address"
                            android:visibility="gone"
                            android:inputType="text"
                            android:autofillHints="postalAddress" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/billing_address_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/billing_address_cont"
                            android:visibility="gone"
                            android:inputType="text"
                            android:autofillHints="extendedAddress" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/billing_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:visibility="gone"
                            android:inputType="text"
                            android:autofillHints="addressLocality" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/billing_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="2"
                            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                            android:hint="@string/state"
                            android:visibility="gone"
                            android:inputType="text"
                            android:autofillHints="addressRegion" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/cc_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="1234567890 "
                            android:hint="@string/card_number"
                            android:visibility="gone"
                            android:inputType="number"
                            android:autofillHints="creditCardNumber" />

                        <LinearLayout
                            android:id="@+id/cvv_and_expiration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:orientation="horizontal">
                                <com.paytheory.android.sdk.view.PayTheoryEditText
                                    android:id="@+id/cc_expiration"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:autofillHints="creditCardExpirationDate"
                                    android:digits="1234567890/"
                                    android:hint="@string/expiration"
                                    android:inputType="number"
                                    android:visibility="gone"
                                    android:layout_weight="1" />
                                <com.paytheory.android.sdk.view.PayTheoryEditText
                                    android:id="@+id/cc_cvv"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:autofillHints="creditCardSecurityCode"
                                    android:digits="1234567890"
                                    android:hint="@string/cvv"
                                    android:inputType="number"
                                    android:visibility="gone"
                                    android:layout_weight="1" />
                        </LinearLayout>

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/ach_account_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="1234567890"
                            android:hint="@string/bank_account_number"
                            android:visibility="gone"
                            android:inputType="number" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/ach_routing_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/bank_routing_number"
                            android:digits="1234567890"
                            android:maxLength="9"
                            android:visibility="gone"
                            android:inputType="number" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/cashName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cashName"
                            android:visibility="gone"
                            android:inputType="text" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/cashContact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cashContact"
                            android:visibility="gone"
                            android:inputType="text" />

                        <com.paytheory.android.sdk.view.PayTheoryEditText
                            android:id="@+id/billing_zip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/billing_zipcode"
                            android:digits="1234567890"
                            android:maxLength="5"
                            android:visibility="gone"
                            android:inputType="number"
                            android:autofillHints="postalCode" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/ach_type_choice_layout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_type"
                            android:visibility="gone">
                            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                android:id="@+id/ach_type_choice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:inputType="none"/>
                        </com.google.android.material.textfield.TextInputLayout>

<!--                        <com.google.android.material.button.MaterialButton-->
<!--                            android:id="@+id/submitButton"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginBottom="24dp"-->
<!--                            android:textColor="#000000"-->
<!--                            android:text="@string/submit_payment"-->
<!--                            android:enabled="false"/>-->
                </LinearLayout>
        </TableLayout>
</ScrollView>